--- a/posSystem/Views/Shared/_Layout.cshtml
+++ b/posSystem/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
                         <a class="collapse-item" asp-area="" asp-controller="Category" asp-action="Index">1. Category</a>
                         <a class="collapse-item" asp-area="" asp-controller="SubCategory" asp-action="Index">2. Sub Category</a>
                         <a class="collapse-item" asp-area="" asp-controller="Brand" asp-action="Index">3. Brand</a>
+                        <a class="collapse-item" asp-area="" asp-controller="SubBrand" asp-action="Index">4. Sub Brand</a>
                         <a class="collapse-item" asp-area="" asp-controller="Item" asp-action="Index">5. Item</a>
                     </div>
                 </div>
