--- a/posSystem/Views/Shared/_Layout.cshtml
+++ b/posSystem/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <!-- Custom styles for this template-->
     @*<link href="/css/sb-admin-2.min.css" rel="stylesheet"> *@
     <link href="/css/sb-admin-2.css" rel="stylesheet">
@@ -76,7 +76,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" asp-area="" asp-controller="Admin" asp-action="Index">1. Admin</a>
                         <a class="collapse-item" asp-area="" asp-controller="" asp-action="">2. Member</a>
-                        <a class="collapse-item" asp-area="" asp-controller="" asp-action="">3. Staff</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Staff" asp-action="Index">3. Staff</a>
                     </div>
                 </div>
             </li>
@@ -257,6 +257,7 @@
     <!-- Custom scripts for all pages-->
     <script src="~/js/sb-admin-2.min.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <!-- Page level plugins -->
     @* <script src="~/vendor/chart.js/Chart.min.js"></script> *@
 
