--- a/posSystem/Views/Shared/_Layout.cshtml
+++ b/posSystem/Views/Shared/_Layout.cshtml
@@ -15,16 +15,16 @@
 
     <title>POS Admin</title>
 
-    <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    
+       
+   
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <!-- Custom styles for this template-->
-    @*<link href="/css/sb-admin-2.min.css" rel="stylesheet"> *@
     <link href="/css/sb-admin-2.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/site.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+   
 </head>
 
 <body id="page-top">
@@ -238,36 +238,16 @@
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+@*     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-@*     <script src="/lib/jquery/dist/jquery.min.js"></script>
-    <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/site.js" asp-append-version="true"></script> *@
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-@*     <script src="/js/main.js"></script> *@
-   
-    <!-- from template -->
-    @* <script src="~/vendor/jquery/jquery.min.js"></script> *@
     <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    @* <!-- Core plugin JavaScript-->
-    <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script> *@
-
-    <!-- Custom scripts for all pages-->
     <script src="~/js/sb-admin-2.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <!-- Page level plugins -->
-    @* <script src="~/vendor/chart.js/Chart.min.js"></script> *@
 
-    <!-- Page level custom scripts -->
-    @* <script src="~/js/demo/chart-area-demo.js"></script>
-    <script src="~/js/demo/chart-pie-demo.js"></script> *@
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <!-- template script end here-->
-    @* <script src="~/js/main.js"></script> *@
+
     <script>
         document.getElementById('logoutLink').addEventListener('click', function (event) {
             event.preventDefault();
