--- a/posSystem/Views/Login/Index.cshtml
+++ b/posSystem/Views/Login/Index.cshtml
@@ -11,7 +11,7 @@
             <div class="text-center">
                 <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
             </div>
-            <form class="user" action="/login/index" method="post">
+            <form class="user" action="/Login/Index" method="post">
                 <div class="form-group">
                     <input type="email" class="form-control form-control-user" id="adminEmail" name="adminEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
                 </div>
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-group">
                     <div class="custom-control custom-checkbox small">
-                        <input type="checkbox" class="custom-control-input" id="rememberMe" name="rememberMe">
+                        <input type="checkbox" class="custom-control-input" id="rememberMe" name="rememberMe" value="true">
                         <label class="custom-control-label" for="rememberMe">Remember Me</label>
                     </div>
                 </div>
