--- a/posSystem/Views/SubBrand/SubBrandIndex.cshtml
+++ b/posSystem/Views/SubBrand/SubBrandIndex.cshtml
@@ -65,7 +65,7 @@
 
                 <td class="text-center">
                     <!-- Edit Button -->
-                    <a href="/SubCategory/Edit?subCid=@item.subBId" class="btn btn-warning btn-sm">
+                    <a href="/SubBrand/Edit?subBid=@item.subBId" class="btn btn-warning btn-sm">
                         <i class="fas fa-edit"></i> Edit
                     </a>
 
