--- a/posSystem/Views/Brand/BrandIndex.cshtml
+++ b/posSystem/Views/Brand/BrandIndex.cshtml
@@ -22,10 +22,7 @@
             <i class="fas fa-plus-circle"></i> Add Brand
         </a>
         <a href="/Brand/MassUpload" class="btn btn-primary mr-2">
-            <i class="fas fa-upload"></i> Mass Upload Brand
-        </a>
-        <a href="/Brand/MassUpload" class="btn btn-primary mr-2">
-            <i class="fas fa-upload"></i> Mass Update Brand
+            <i class="fas fa-upload"></i> Mass Upload/Update Brand
         </a>
         <button type="button" id="btnDeleteAll" class="btn btn-danger">
             <i class="fas fa-trash-alt"></i> Delete All Brands
