--- a/posSystem/Views/Category/CategoryIndex.cshtml
+++ b/posSystem/Views/Category/CategoryIndex.cshtml
@@ -21,11 +21,9 @@
             <i class="fas fa-plus-circle"></i> Add Category
         </a>
         <a href="/Category/MassUpload" class="btn btn-primary mr-2">
-            <i class="fas fa-upload"></i> Mass Upload Category
+            <i class="fas fa-upload"></i> Mass Upload/Update Categories
         </a>
-        <a href="/Category/MassUpload" class="btn btn-primary mr-2">
-            <i class="fas fa-upload"></i> Mass Update Category
-        </a>
+
         <button type="button" id="btnDeleteAll" class="btn btn-danger">
             <i class="fas fa-trash-alt"></i> Delete All Categories
         </button>
